tempo/unpackaged/objects/MainObject__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Child__c</fullName>
        <label>No Of Child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>MainObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>mainObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MainObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>